[gd_scene load_steps=2 format=3 uid="uid://ceu8f5bcp3r2l"]

[ext_resource type="Script" uid="uid://obchkpp6xga0" path="res://scenes/ui/Card.gd" id="1_qhpua"]

[node name="Card" type="PanelContainer"]
custom_minimum_size = Vector2(240, 350)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
script = ExtResource("1_qhpua")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Art" type="TextureRect" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TypeLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
